[project]
name = "find-my-number"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.ruff]
lint.extend-select = [
    "ALL"
]

lint.ignore = [
    "Q000", 
    "Q002", 
    "ANN001",
    "ANN201",
    "FBT003",
    "FBT002", 
    "D213",
    "D211",
    "N999",
    "S101",
    "D203",
]

# Allow lines to be as long as 100.
line-length = 100

# Group violations by containing file.
output-format = "grouped"
